Fix navigation padding on mobile

--- a/_sass/styles-dark.scss
+++ b/_sass/styles-dark.scss
@@ -49,10 +49,14 @@ nav {
 			color: $nav-link-active-color-dark !important;
 		}
 	}
-	
+
 	.navbar-toggler {
-		color: $body-color-dark;
+		color: $navbar-toggler-color-dark;
 		border: var(--bs-border-width) solid $navbar-toggler-border-color-dark !important;
+		
+		&:hover {
+			background: $navbar-toggler-border-color-dark;
+		}
 		
 		.navbar-toggler-icon {
 			background-image: $navbar-dark-toggler-icon-bg;
