--- a/_sass/variables-dark.scss
+++ b/_sass/variables-dark.scss
@@ -29,6 +29,7 @@ $nav-bg-dark: rgba($body-bg-dark,.85);
 $nav-link-color-dark: #fff;
 $nav-link-active-color-dark: #fff;
 
+$navbar-toggler-color-dark: rgba($body-color-dark, 0.7);
 $navbar-toggler-border-color-dark: $border-color-dark; 
 
 $dropdown-bg-dark: rgba($body-bg-dark, 0.8);
